# fastcdc-py

./: .editorconfig  .gitignore  README.md  build.py  caveman.txt  pyproject.toml
.github/workflows/: build.yml  pythonpackage.yml  release.yml  run-tests.yml  test.yml
fastcdc/: .gitignore  __init__.py  benchmark.py  chunkify.py  cli.py  const.py  cylib.py  cylib.pyx  fastcdc_cy.pyx  fastcdc_py.py  lib.py  original.py  scan.py  utils.py
study/: optimize.ipynb
tests/: __init__.py  test_fastcdc.py  test_scan.py  test_utils.py
