[tool.poetry]
name = "fastcdc"
version = "1.3.0"
description = "FastCDC (content defined chunking) in pure Python."
authors = ["Titusz Pan <tp@py7.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iscc/fastcdc-py"
keywords = ["cdc", "chunking"]
build = "build.py"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Topic :: Multimedia",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
fastcdc = 'fastcdc.cli:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
humanize = "^2.4.0"
codetiming = "^1.2.0"
click-default-group = "^1.2.2"
py-cpuinfo = "^6.0.0"

xxhash = { version = "^1.4.4", optional = true }
blake3 = { version = "^0.1.5", optional = true }

[tool.poetry.extras]
hashes = ["xxhash", "blake3"]

[tool.poetry.dev-dependencies]
pytest = "^5"
black = "^19.10b0"
jupyterlab = "^2.1.2"
cython = "^0.29.17"
pytest-benchmark = "^3.2.3"

[build-system]
requires = ["poetry>=1.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.masonry.api"
