[tool.poetry]
name = "fastcdc"
version = "1.4.3"
description = "FastCDC (content defined chunking) in pure Python."
authors = ["Titusz Pan <tp@py7.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iscc/fastcdc-py"
keywords = ["cdc", "chunking"]
build = "build.py"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Topic :: Multimedia",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
fastcdc = 'fastcdc.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
humanize = "^2.6.0"
codetiming = "^1.4.0"
click-default-group = "^1.2.2"
py-cpuinfo = "^9.0.0"

xxhash = { version = "^3.2.0", optional = true }
blake3 = { version = "^0.3.3", optional = true }
Cython = "^0.29.33"

[tool.poetry.extras]
hashes = ["xxhash", "blake3"]

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
jupyterlab = "^3.5.3"
cython = "^0.29.33"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry>=1.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.masonry.api"
