[tool.poetry]
name = "fastcdc"
version = "1.6.0"
description = "FastCDC (content defined chunking) in pure Python."
authors = ["Titusz Pan <tp@py7.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iscc/fastcdc-py"
keywords = ["cdc", "chunking"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    "Topic :: Multimedia",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
    "Topic :: Software Development",
]

[tool.poetry.scripts]
fastcdc = 'fastcdc.cli:cli'

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
click = "^8.1"
humanize = "^4.0"
codetiming = "^1.2"
click-default-group = "^1.2"
py-cpuinfo = "^9.0"

xxhash = { version = "^3.0", optional = true }
blake3 = { version = "^0.3", optional = true }

[tool.poetry.extras]
hashes = ["xxhash", "blake3"]

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
cython = "*"
pytest-benchmark = "*"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.core.masonry.api"
